<resources>
    <string name="app_name">MARVEL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Olá, Rafael</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_loja">Loja</string>
    <string name="menu_orders">Meus Pedidos</string>
    <string name="menu_cetegories">Categorias</string>
    <string name="menu_cart">Carrinho</string>
    <string name="action_cart">Carrinho</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_cart">actionButtonCart</string>
    <string name="textViewCart">TextViewCart</string>
    <string name="adicionar_ao_carrinho">Adicionar ao carrinho</string>
    <string name="comprar_agora">Comprar agora</string>
    <string name="descricao">Descrição:</string>
    <string name="personagens">Personagens:</string>
    <string name="igual">=</string>
    <string name="cupom">Cupom</string>
    <string name="total">Total</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="pedido_01">Pedido #01</string>
    <string name="_150_00">$150.00</string>
    <string name="descri_o">Descrição:</string>
    <string name="avengers_01">Avengers #01</string>

    <string name="thor_01">Thor #01</string>
    <string name="q_1x">1x</string>
    <string name="q_4x">4X</string>
    <string name="data">Data:</string>
    <string name="d_10_01_2021">10/01/2021</string>
    <string name="hora">Hora:</string>
    <string name="d_10_00">10:00</string>
    <string name="avengers_10">Avengers #10</string>


</resources>