<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/textViewNumeroPedido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pedido_01"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewDescricaoOrder"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPriceOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_150_00"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDescricaoOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/descri_o"
        app:layout_constraintEnd_toStartOf="@+id/textViewDescricao2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumeroPedido" />

    <TextView
        android:id="@+id/textViewDescricao2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/avengers_01"
        app:layout_constraintBottom_toTopOf="@+id/textViewDescricao3"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescricaoOrder" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q_4x"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/textViewDescricao2"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescricaoOrder" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/textViewDescricao3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/thor_01"
        app:layout_constraintBottom_toTopOf="@+id/textViewDataOrder2"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescricao2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q_1x"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDescricao3"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/textViewDescricao3"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textViewDataOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/data"
        app:layout_constraintBottom_toTopOf="@+id/textViewHoraOrder"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescricao3" />

    <TextView
        android:id="@+id/textViewDataOrder2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/d_10_01_2021"
        app:layout_constraintBottom_toTopOf="@+id/textViewHoraOrder2"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescricao3" />

    <TextView
        android:id="@+id/textViewHoraOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDataOrder" />

    <TextView
        android:id="@+id/textViewHoraOrder2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/d_10_00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textViewDataOrder2" />

    <TextView
        android:id="@+id/textViewDescricao1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/avengers_10"
        app:layout_constraintBottom_toTopOf="@+id/textViewDescricao2"
        app:layout_constraintEnd_toStartOf="@+id/textView20"
        app:layout_constraintStart_toEndOf="@+id/textViewDescricaoOrder"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumeroPedido" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/q_4x"
        app:layout_constraintBottom_toTopOf="@+id/textViewDescricao2"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/textViewDescricao1"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumeroPedido" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="59dp" />

</androidx.constraintlayout.widget.ConstraintLayout>